--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/computer.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="记录我在AI、产品管理、编程、创业、Web3、量子领域的学习成果" />
-    <title>成长之路 | Growth Journey</title>
+    <title>Ste1ven</title>
   </head>
   <body>
     <div id="root"></div>
